--- a/css/main.css
+++ b/css/main.css
@@ -207,6 +207,39 @@ pre {
   text-shadow: 1px 1px 1px var(--shadow);
 }
 
+/* Width & Height */
+::-webkit-scrollbar {
+  width: 11px;
+  height: auto;
+}
+
+/* Track*/
+body::-webkit-scrollbar-track {
+  background-color: transparent;
+}
+
+/* Track Piece*/
+body::-webkit-scrollbar-track-piece {
+  background-color: transparent;
+  -webkit-border-radius: 5px;
+}
+
+/* Handle */
+body::-webkit-scrollbar-thumb { 
+  height: auto;
+  background-color: #24292f; 
+  -webkit-border-radius: 5px;
+  border: 1px solid rgba(255, 255, 255, 1.0);
+}
+
+/* Handle on Hover */
+body::-webkit-scrollbar-thumb:hover {
+  height: auto;
+  background-color: #404040;
+  -webkit-border-radius: 5px;
+  border: 1px solid rgba(255, 255, 255, 1.0);
+}
+
 /* roboto-regular - latin */
 @font-face {
   font-family: 'Roboto';
